--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "expo": "~53.0.9",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.5",
+    "expo-notifications": "~0.31.2",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.7.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "expo-device": "~7.1.4",
-    "expo-notifications": "~0.31.2",
-    "expo-image-picker": "~16.1.4",
-    "expo-location": "~18.1.5",
-    "expo-dev-client": "~5.1.8"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "~5.8.3",
-    "@types/react": "~19.0.10"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
